--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,3 +8,6 @@ import(corrplot)
 import(dplyr)
 import(ggplot2)
 importFrom(reshape,melt)
+importFrom(stats,cor)
+importFrom(stats,t.test)
+importFrom(stats,wilcox.test)
