--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,14 +12,15 @@ License: MIT + file LICENSE
 Depends: R (>= 3.1.0)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.2
 Roxygen: list(markdown = TRUE)
 Imports: 
     stats,
     corrplot,
     dplyr,
     ggplot2, 
-    reshape
+    reshape, 
+    shiny
 Suggests: 
     knitr,
     rmarkdown,
