--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,12 @@ export(correlationPlot)
 export(exprNormalization)
 export(exprPlot)
 export(rankDEG)
+export(runExpressionAnalysis)
 import(corrplot)
 import(dplyr)
 import(ggplot2)
 importFrom(reshape,melt)
+importFrom(shiny,runApp)
 importFrom(stats,cor)
 importFrom(stats,t.test)
 importFrom(stats,wilcox.test)
