--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,13 @@
 export(correlationPlot)
 export(exprNormalization)
 export(exprPlot)
+export(loadData)
 export(rankDEG)
 export(runExpressionAnalysis)
 import(corrplot)
 import(dplyr)
 import(ggplot2)
+import(readxl)
 importFrom(reshape,melt)
 importFrom(shiny,runApp)
 importFrom(stats,cor)
