--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(runExpressionAnalysis)
 import(corrplot)
 import(dplyr)
 import(ggplot2)
+importFrom(assertthat,assert_that)
+importFrom(dplyr,arrange)
 importFrom(reshape,melt)
 importFrom(shiny,runApp)
 importFrom(stats,cor)
