--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,15 +3,18 @@
 export(correlationPlot)
 export(exprNormalization)
 export(exprPlot)
+export(keggDiseaseGenes)
 export(loadData)
 export(rankDEG)
 export(runExpressionAnalysis)
 import(corrplot)
 import(dplyr)
 import(ggplot2)
+importFrom(KEGGREST,keggGet)
 importFrom(assertthat,assert_that)
 importFrom(reshape,melt)
 importFrom(shiny,runApp)
 importFrom(stats,cor)
 importFrom(stats,t.test)
 importFrom(stats,wilcox.test)
+importFrom(stringr,word)
