--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,13 +14,15 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.2
 Roxygen: list(markdown = TRUE)
+biocViews: KEGGREST
 Imports: 
     stats,
     corrplot,
     dplyr,
     ggplot2, 
     reshape, 
-    shiny
+    shiny, 
+    stringr
 Suggests: 
     knitr,
     rmarkdown,
