--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(correlationPlot)
 export(exprNormalization)
+export(exprPCA)
 export(exprPlot)
 export(keggDiseaseGenes)
 export(loadData)
@@ -10,8 +11,10 @@ export(runExpressionAnalysis)
 import(corrplot)
 import(dplyr)
 import(ggplot2)
+importFrom(FactoMineR,PCA)
 importFrom(KEGGREST,keggGet)
 importFrom(assertthat,assert_that)
+importFrom(factoextra,fviz_pca_ind)
 importFrom(reshape,melt)
 importFrom(shiny,runApp)
 importFrom(stats,cor)
