--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,3 +21,6 @@ importFrom(stats,cor)
 importFrom(stats,t.test)
 importFrom(stats,wilcox.test)
 importFrom(stringr,word)
+importFrom(utils,read.csv)
+importFrom(utils,read.csv2)
+importFrom(utils,read.table)
